1. Collection API Улучшения [#193972]