@@ -1,7 +1,6 @@
 package ru.job4j.list;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.Test;
@@ -14,7 +13,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -33,7 +32,7 @@ public class ConvertList2ArrayTest {
         list.add(new int[] {});
         list.add(new int[] {5, 7, 9});
         List<Integer> result = test.convert(list);
-        List<Integer> expected = new ArrayList<>(Arrays.asList(1, 2, 5, 7, 9));
+        List<Integer> expected = List.of(1, 2, 5, 7, 9);
         assertThat(result, is(expected));
 
     }
