@@ -1,6 +1,5 @@
 package ru.job4j.list;
 
-import java.util.Arrays;
 import java.util.List;
 import org.junit.Test;
 
@@ -16,9 +15,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
