@@ -11,13 +11,13 @@ public class UserSortTest {
 
     @Test
     public void whenSetIsSortedAndHaveNoDuplicate() {
-        List<User> users = new ArrayList<>(Arrays.asList(
+        List<User> users = List.of(
                 new User("vasiliy", 40),
                 new User("anna", 16),
                 new User("kolya", 50),
                 new User("anna", 16)
-        ));
-        Set<User> expected = new TreeSet<>(Arrays.asList(
+        );
+        Set<User> expected = new TreeSet<>(Set.of(
                 new User("anna", 16),
                 new User("vasiliy", 40),
                 new User("kolya", 50)
@@ -34,11 +34,11 @@ public class UserSortTest {
                 new User("kolya", 50),
                 new User("anna", 16)
         ));
-        List<User> expected = new ArrayList<>(Arrays.asList(
+        List<User> expected = List.of(
                 new User("anna", 16),
                 new User("kolya", 50),
                 new User("vasiliy", 40)
-        ));
+        );
         UserSort test = new UserSort();
         List<User> result = test.sortNameLength(users);
         assertThat(result, is(expected));
@@ -54,14 +54,14 @@ public class UserSortTest {
                 new User("anna", 6),
                 new User("kolya", 15)
         ));
-        List<User> expected = new ArrayList<>(Arrays.asList(
+        List<User> expected = List.of(
                 new User("andrei", 20),
                 new User("anna", 6),
                 new User("anna", 16),
                 new User("kolya", 15),
                 new User("kolya", 50),
                 new User("vasiliy", 40)
-        ));
+        );
         UserSort test = new UserSort();
         List<User> result = test.sortByAllFields(users);
         assertThat(result, is(expected));
